<resources>
    <string name="app_name">StudyRewardsApp</string>
    <string name="rewards">Rewards</string>
    <string name="study_management">Study Management</string>
    <string name="settings">Settings</string>
    <string name="hours_for_reward">Minutes for reward</string>
    <string name="hours_default_value">1</string>>
    <string name="save">Save</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="editPassword">Password</string>
    <string name="study_management_app">Study Management App</string>
    <string name="hinttextitem">Hint for text</string>
    <string name="click">click</string>
    <string name="content_description_temp">Content Description Temp</string>
    <string name="login">Login</string>
    <string name="radiobutton">RadioButton</string>
    <string name="verify">Verify</string>
    <string name="next">Next</string>
    <string name="continueText">Continue</string>
    <string name="finish">Finish</string>
    <string name="startTime">00:00:00</string>
    <string name="timer">Timer</string>
    <string name="chrono">00:00:00</string>
    <string name="getTime">Get Time</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="totalTime">00:00:00</string>
    <string name="rewardsTitle">Choose you Reward</string>
    <string name="selectReward">Select</string>
    <string name="myReward">My Reward</string>
    <string name="selectDate">Select a date</string>
    <string name="getProgress">Progress</string>
    <string name="images">Images</string>
    <string name="confirm">Confirm</string>
    <string name="addTask">Add</string>
    <string name="go_study">Go Study</string>
    <string name="selected_reward">Selected Reward</string>
    <string name="deadline">Deadline</string>
    <string name="selectedDeadline">Selected Deadline</string>
    <string name="task_title">Task Title</string>
    <string name="add_task_title">Add New Task</string>
    <string name="study_rewards">Study Rewards</string>
    <string name="studying_for">Studying for</string>
    <string name="pause">Pause</string>
    <string name="end_session">Finish Session</string>
    <string name="session_time">Session Time</string>
    <string name="total_time">Total Time</string>
    <string name="task_accomplishment_description">Task Accomplishment Description</string>
    <string name="elapsed_time">Elapsed Time</string>
    <string name="hint_message">Describe topic studied or completed activity</string>


</resources>