<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTaskActivity">


    <TextView
        android:id="@+id/lblAddTaskTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:minHeight="48dp"
        android:text="@string/add_task_title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/purple_500"
        android:textSize="24sp"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/lblTaskTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblTaskTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_title"
        app:layout_constraintBottom_toTopOf="@+id/lblHoursRequired"
        app:layout_constraintEnd_toStartOf="@+id/textTaskTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblAddTaskTitle" />

    <EditText
        android:id="@+id/textTaskTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/task_title"
        app:layout_constraintBottom_toTopOf="@+id/lblHoursRequired"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/lblTaskTitle"
        app:layout_constraintTop_toBottomOf="@+id/lblAddTaskTitle"
        tools:ignore="DuplicateSpeakableTextCheck"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/lblHoursRequired"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hours_for_reward"
        app:layout_constraintBottom_toTopOf="@+id/lblDeadline"
        app:layout_constraintEnd_toStartOf="@+id/textTaskTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblTaskTitle" />

    <EditText
        android:id="@+id/textHoursRequired"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:text="@string/hours_default_value"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/lblDeadline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/lblHoursRequired"
        app:layout_constraintTop_toBottomOf="@id/textTaskTitle"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/lblDeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deadline"
        app:layout_constraintBottom_toTopOf="@id/cvDeadline"
        app:layout_constraintEnd_toStartOf="@id/tvDeadline"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="@+id/lblHoursRequired"
        app:layout_constraintTop_toBottomOf="@id/lblHoursRequired" />

    <TextView
        android:id="@+id/tvDeadline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="144dp"
        android:text="@string/selectedDeadline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lblDeadline" />

    <CalendarView
        android:id="@+id/cvDeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        app:layout_constraintBottom_toTopOf="@id/btnAddTaskDetail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDeadline" />

    <Button
        android:id="@+id/btnAddTaskDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addTask"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvDeadline" />

</androidx.constraintlayout.widget.ConstraintLayout>