<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReviewTaskActivity">

    <Button
        android:id="@+id/btnStudyTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_study"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnAddTask"
        app:layout_constraintTop_toBottomOf="@+id/tvSelectedReward" />

    <Button
        android:id="@+id/btnAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addTask"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSelectedReward"
        app:layout_constraintStart_toEndOf="@+id/btnStudyTime" />

    <TextView
        android:id="@+id/tvSelectedReward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selected_reward"
        app:layout_constraintBottom_toTopOf="@+id/btnAddTask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>